--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-@charset 
+@charset "UTF-8";
+
+body {
+    background-color: rgba(0, 0, 0, 0.940);
+}
+
+nav {
+    color: #ffffff;
+}
+
+main > header > h1 {
+    color: aliceblue;
+}
