--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
     background-color: rgba(0, 0, 0, 0.940);
 }
 
-nav {
+.menu {
+    list-style-type: none;
     color: #ffffff;
+    font-family: ;
 }
 
 main > header > h1 {
