--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .menu {
     list-style-type: none;
     color: #ffffff;
-    font-family: ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main > header > h1 {
